Closed
Bug 227986
Opened 21 years ago
Closed 17 years ago
EmbedPrompter should use GtkComboBox on gtk+ 2.4
Categories
(Core Graveyard :: Embedding: GTK Widget, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: chpe, Assigned: chpe)
References
Details
Attachments
(1 file, 2 obsolete files)
1.89 KB,
patch
|
timeless
:
review+
sayrer
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.0.1) Gecko/20020823 Netscape/7.0
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.0.1) Gecko/20020823 Netscape/7.0
The embed prompt implementation uses a GtkOptionMenu when selecting from a list.
Since gtk+ 2.3.1, GtkOptionMenu is deprecated in favour of GtkComboBox. When
compiled with gtk+ >= 2.3.1, embed prompter should use a GtkComboBox instead.
Reproducible: Always
Steps to Reproduce:
Assignee | ||
Comment 1•21 years ago
|
||
Assignee | ||
Updated•21 years ago
|
Attachment #137160 -
Flags: review?(bryner)
Assignee | ||
Updated•21 years ago
|
Attachment #137160 -
Flags: superreview?(blizzard)
Updated•21 years ago
|
Attachment #137160 -
Flags: superreview?(blizzard) → superreview+
Comment 2•21 years ago
|
||
Comment on attachment 137160 [details] [diff] [review]
patch to use GtkComboBox on gtk+ 2.3.1 and above
Just one comment here -- I'd rather do the version check once, like this:
#if GTK_CHECK_VERSION(2,3,1)
#define USE_GTK_COMBOBOX
#endif
and then use #ifdef USE_GTK_COMBOBOX
This just avoids duplicating the version number, useful if we need to ever
change it.
r=bryner with that change.
Attachment #137160 -
Flags: review?(bryner) → review+
Assignee | ||
Comment 3•21 years ago
|
||
Assignee | ||
Updated•21 years ago
|
Attachment #137160 -
Attachment is obsolete: true
Updated•21 years ago
|
Attachment #137398 -
Flags: superreview+
Comment 4•19 years ago
|
||
This is an automated message, with ID "auto-resolve01".
This bug has had no comments for a long time. Statistically, we have found that
bug reports that have not been confirmed by a second user after three months are
highly unlikely to be the source of a fix to the code.
While your input is very important to us, our resources are limited and so we
are asking for your help in focussing our efforts. If you can still reproduce
this problem in the latest version of the product (see below for how to obtain a
copy) or, for feature requests, if it's not present in the latest version and
you still believe we should implement it, please visit the URL of this bug
(given at the top of this mail) and add a comment to that effect, giving more
reproduction information if you have it.
If it is not a problem any longer, you need take no action. If this bug is not
changed in any way in the next two weeks, it will be automatically resolved.
Thank you for your help in this matter.
The latest beta releases can be obtained from:
Firefox: http://www.mozilla.org/projects/firefox/
Thunderbird: http://www.mozilla.org/products/thunderbird/releases/1.5beta1.html
Seamonkey: http://www.mozilla.org/projects/seamonkey/
Assignee | ||
Comment 5•19 years ago
|
||
This bug is still valid.
The patch above has r+sr, but I'm unsure about whether it should be checked in
since it would cause a hard dependency on gtk 2.4. In other places in the
codebase people go to ridiculous lengths (dynamically open the .so) to avoid
that, but maybe in the embedding widget it's okay?
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•17 years ago
|
Assignee: blizzard → nobody
QA Contact: pavlov → gtk-widget
Updated•17 years ago
|
Assignee: nobody → chpe
Comment 6•17 years ago
|
||
same patch as above, but just unbitrotten... going to get timeless's review on this, though, as the patch _was_ written in 2003 :/
Attachment #137398 -
Attachment is obsolete: true
Attachment #284513 -
Flags: review?(timeless)
Comment on attachment 284513 [details] [diff] [review]
unbitrotten patch
this seems reasonable, although chpe's warning scares me more than i think it should.
Attachment #284513 -
Flags: review?(timeless) → review+
Updated•17 years ago
|
Attachment #284513 -
Flags: approval1.9?
Updated•17 years ago
|
Attachment #284513 -
Flags: approval1.9? → approval1.9+
Updated•17 years ago
|
Keywords: checkin-needed
Comment 8•17 years ago
|
||
Checking in embedding/browser/gtk/src/EmbedPrompter.cpp;
/cvsroot/mozilla/embedding/browser/gtk/src/EmbedPrompter.cpp,v <-- EmbedPrompter.cpp
new revision: 1.21; previous revision: 1.20
done
Comment 9•17 years ago
|
||
According to bug 408238 this should be reopened?
Updated•13 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•