Bug 227986 - "EmbedPrompter should use GtkComboBox on gtk+ 2.4" [p=chpe r=bryner r=timeless sr=blizzard a1.9=sayrer]